# trello-to-obsidian-kanban

./: Cargo.toml
src/: cli.rs  main.rs
src/trello/: json.rs  mod.rs
