[package]
name = "trello-to-obsidian-kanban"
version = "0.1.0"
edition = "2021"
authors = ["IS2511 <is2511@is2511.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.4"
clio = { version = "0.3.4", features = ["clap-parse"] }
serde_json = "1.0"
