[package]
name = "trello-to-obsidian-kanban"
version = "0.1.0"
edition = "2021"
authors = ["IS2511 <is2511@is2511.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

clap = "4.4.14"
clio = { version = "0.3.5", features = ["clap-parse"] }
tracing = "0.1.40"
anyhow = "1.0.79"
